--- a/CardBao/Info.plist
+++ b/CardBao/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.0</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -26,7 +26,7 @@
 			<key>CFBundleURLIconFile</key>
 			<string></string>
 			<key>CFBundleURLName</key>
-			<string>ZMH.CardBao</string>
+			<string>Finance.CardBao</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>cardapp</string>
