--- a/CardBao/Info.plist
+++ b/CardBao/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleAllowMixedLocalizations</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<string>zh_CN</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -34,7 +34,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>5</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -43,15 +43,15 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>身份认证等功能使用到你的相机</string>
+	<string>身份认证、授信等功能使用到你的相机</string>
 	<key>NSContactsUsageDescription</key>
-	<string>身份认证等功能使用到你的通讯录</string>
+	<string>身份认证、授信等功能使用到你的通讯录</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>身份认证等功能是否允许使用定位</string>
+	<string>注册登录、身份认证、借款等功能访问定位服务</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>身份认证等功能使用到你的麦克风</string>
+	<string>身份认证、授信等功能使用到你的麦克风</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>身份认证等功能使用到你的相册</string>
+	<string>身份认证、授信等功能使用到你的相册</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
